fix: add hover background color for menu items on small screens

--- a/source/Style/Menu.scss
+++ b/source/Style/Menu.scss
@@ -21,6 +21,10 @@
 .vjs-workinghover {
   .vjs-menu-item:hover {
     background-color: rgba(255, 255, 255, 0.1);
+
+    @media (max-width: $small-dimension) {
+      background-color: rgba(0, 0, 0, 0.1);
+    }
   }
 }
 
